bug testing, trying to get smoother load times on mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -96,15 +96,14 @@
 .mainBackgroundImageWrapper {
   width: 100%;
   height: 500px;
-  position: relative;
-  box-sizing: border-box; }
-  /* line 8, public/sass/_mainBackground.scss */
+  position: relative; }
+  /* line 7, public/sass/_mainBackground.scss */
   .mainBackgroundImageWrapper .mainBackgroundImage {
     width: 100%;
     height: 100%;
     object-fit: cover;
     position: absolute; }
-  /* line 15, public/sass/_mainBackground.scss */
+  /* line 14, public/sass/_mainBackground.scss */
   .mainBackgroundImageWrapper .salesPitch {
     color: #FFFFF0;
     position: relative;
@@ -119,7 +118,7 @@
     text-align: center;
     line-height: 5rem;
     text-transform: capitalize; }
-  /* line 31, public/sass/_mainBackground.scss */
+  /* line 30, public/sass/_mainBackground.scss */
   .mainBackgroundImageWrapper .salesPitchBackground {
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 5px;
